# zgl-rag

./: .env.example  .gitignore  ARCHITECTURE.md  FILE_MANIFEST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  example_usage.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  document_loader.py  rag_engine.py  vector_store.py
config/: settings.py
data/: .gitkeep
docs/: .gitkeep  sample_ai_intro.md
