[project]
name = "zgl-rag"
version = "0.1.0"
description = "基于LangChain的知识库RAG系统"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "pypdf>=3.17.0",
    "unstructured>=0.16.0",
    "tiktoken>=0.8.0",
    "langchain-chroma>=1.1.0",
]
